src/App.scss
@import 'Themes';

body, html {
  padding: 0;
  margin: 0;
  font-family: 'Noto Sans Display', sans-serif;
  font-size: 2vmin;
}

body {
  background: var(--bg) none;
  color: var(--text-color);
  padding: 0;
}

#root {
  padding: 0;
  margin: 0;
}

.app {
  position: relative;
}

